Rework most of the logic. (#1)